Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3292

Kudu scanner should not fail if KeepAlive request fails

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Kudu_Impala
    • Impala 2.7.0
    • Backend
    • None

    Description

      The KeepKuduScannerAlive() function can fail with ServiceUnavailable if it is running against a very heavily-loaded tablet server. This is OK – it should ignore the warning and just try again after a short time, rather than failing the whole query.

      Attachments

        Issue Links

          Activity

            People

              tlipcon Todd Lipcon
              tlipcon Todd Lipcon
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: