IMPALA-3292. Kudu scanner should not fail if KeepAlive request fails

The KeepKuduScannerAlive() function can fail with ServiceUnavailable if
it is running against a very heavily-loaded tablet server. This is OK –
it should ignore the warning and just try again after a short time,
rather than failing the whole query.

Change-Id: I10ad2cfde3e50a4486d03f8dd763faac2eb4926a
Reviewed-on: http://gerrit.cloudera.org:8080/2708
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Internal Jenkins